--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,9 +185,12 @@
     <string name="category_palette">팔레트</string>
     <string name="palette_normal">기본 팔레트</string>
     <string name="category_new">새 카테고리</string>
+    <string name="category_add">새 카테고리 추가</string>
+    <string name="category_delete">카테고리 삭제</string>
     <string name="category_hint">카테고리 이름</string>
     <string name="category_color">색상</string>
-    <string name="category_detail_isShare">공유 설정</string>
+    <string name="category_detail_share">공개 설정</string>
+    <string name="category_detail_share_guide">카테고리 일정이 친구에게 공개되지 않습니다.</string>
     <string name="category_detail_setting">카테고리 설정</string>
     <string name="group_place">장소</string>
     <string name="group_money">금액 정산</string>
