--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,9 +42,7 @@
     <string name="register_nickname_rule">&#160;&#160;• 영어, 한글, 숫자 포함 12자 이내\n&#160;&#160;• 태그, 이모지 및 특수 문자 불가능</string>
     <string name="register_name">이름 *</string>
     <string name="register_birth">생년월일 *</string>
-    <string name="register_birth_year">YYYY</string>
-    <string name="register_birth_month">MM</string>
-    <string name="register_birth_day">DD</string>
+    <string name="register_birth_empty">YYYY/MM/DD</string>
     <string name="register_birth_divider">/</string>
     <string name="register_color_title">좋아하는 색상 *</string>
     <string name="register_color_dialog_title">좋아하는 색상</string>
