--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="nav_home">Home</string>
     <string name="nav_community">Community</string>
     <string name="nav_shop">Shop</string>
-    <string name="nav_custom">Custom</string>
+    <string name="nav_setting">Setting</string>
 
     <!-- Group 화면 관련 String -->
     <string name="group_calendar">Group Calendar</string>
@@ -187,7 +187,7 @@
     <string name="noticeFormat">yyyy.MM.dd (E) hh:mm a</string>
 
     <!-- setting fragent 관련 string -->
-    <string name="custom_setting">설정</string>
+    <string name="custom_setting">Setting</string>
     <string name="custom_setting_ver">버전 정보</string>
     <string name="custom_setting_term">이용 약관</string>
     <string name="custom_setting_individual_policy">개인정보 처리방침</string>
