✨ Feat: 프로필 편집 비즈니스 로직 구현
Related to: #358

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,7 @@
     <string name="profile_edit_public_announce">공개 설정 시, 친구가 보는 내 프로필에 정보가 표시됩니다.</string>
     <string name="profile_edit_public">공개</string>
     <string name="profile_edit_private">비공개</string>
+    <string name="profile_edit_success">프로필 변경 내용이 저장되었습니다.</string>
 
     <!-- schedule 관련 String -->
     <string name="schedule_personal">개인 일정</string>
