--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,13 +186,18 @@
     <string name="timeFormat">hh:mm a</string>
     <string name="noticeFormat">yyyy.MM.dd (E) hh:mm a</string>
 
-    <!-- setting fragent 관련 string -->
+    <!-- setting fragment 관련 string -->
     <string name="custom_setting">Setting</string>
     <string name="custom_setting_ver">버전 정보</string>
     <string name="custom_setting_term">이용 약관</string>
     <string name="custom_setting_individual_policy">개인정보 처리방침</string>
     <string name="custom_setting_logout">로그아웃</string>
     <string name="custom_setting_withdrawal">회원탈퇴</string>
+    <string name="dialog_setting_logout_title">정말 로그아웃 하시겠어요?</string>
+    <string name="dialog_setting_quit_title">정말 계정을 삭제하시겠어요?</string>
+    <string name="dialog_setting_quit_content">지금까지의 정보는\n3일 뒤 모두 사라집니다.</string>
+    <string name="toast_setting_logout_success">로그아웃에 성공하셨습니다.</string>
+    <string name="toast_setting_quit_success">회원탈퇴에 성공하셨습니다.</string>
 
     <!-- 카테고리 관련 String -->
     <string name="category">카테고리</string>
