--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="nickname">닉네임</string>
     <string name="input_hint">입력</string>
     <string name="changes_save">변경 내용 저장</string>
+    <string name="toast_copy">클립보드에 복사되었습니다.</string>
 
     <!-- 약관 동의 관련 String -->
     <string name="for_service">서비스 이용을 위한</string>
