--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -244,6 +244,8 @@
     <string name="moim_guest_invite_notification">링크는 나모 어플을 설치하지 않은 게스트와 공유할 수 있습니다. 편집은 불가하며, 보기 권한이 주어집니다.</string>
     <string name="dialog_moim_schedule_invite_complete_title">초대를 확정하시겠습니까?</string>
     <string name="dialog_moim_schedule_invite_complete_content">초대한 이후에는 참석자를\n변경하실 수 없습니다.</string>
+    <string name="dialog_moim_schedule_invite_change_notify_title">선택된 내용이 저장되지 않습니다.</string>
+    <string name="dialog_moim_schedule_invite_change_notify_content">정말 나가시겠어요?</string>
 
     <!-- 친구 -->
     <string name="friend_search_hint">닉네임 혹은 이름 입력</string>
